welcome.lessons.welcome.array.island.Island.py.error
  File "<script>", line 5
    nbisland++
             ^
SyntaxError: no viable alternative at input '\n'
